GNOME Bugzilla – Bug 771495
wayland: segfault in meta_wayland_surface_get_toplevel when pressing both left and right mouse buttons in gnome-terminal
Last modified: 2016-09-18 03:00:45 UTC
Description: mutter segfaults when the user presses left and right mouse button simultaneously in gnome-terminal under Wayland. How reproducible: 100% Steps to reproduce: 1. Run GNOME Wyland session 2. Start gnomet-terminal 3. presse left and right mouse buttons simultanously Actual results:
+ Trace 236668
Downstream bug: https://bugzilla.redhat.com/show_bug.cgi?id=1376447
Created attachment 335651 [details] WAYLAND_DEBUG=1 WAYLAND_DEBUG=1 /usr/libexec/gnome-terminal-server --app-id my.foo.Terminal |& tee wayland-debug.log & sleep 3; gnome-terminal --app-id my.foo.Terminal
Created attachment 335676 [details] [review] wayland: Handle parent-less popup commits A xdg_popup, when active, always has a parent surface. However, a popup created may immediately become invalid, for example when it is not granted a grab, in which case it won't be assigned a parent since it will never be mapped. This case needs to be handled elsewhere, as one cannot assume a MetaWaylandXdgPoup that is processed (via wl_surface commit handling etc) will not have a parent_surface.
Review of attachment 335676 [details] [review]: (In reply to Jonas Ådahl from comment #3) > one cannot assume a MetaWaylandXdgPoup [...] will not have a parent_surface The double negative looks wrong here - we weren't assuming that there was *no* parent surface, we were assuming that there was one. Otherwise looks good to me.
Pushed with fixed commit message. Attachment 335676 [details] pushed as 417757e - wayland: Handle parent-less popup commits